--- a/freeer.html
+++ b/freeer.html
@@ -148,37 +148,37 @@
         // Current Star Players Mapping (Updated)
         const teamPlayers = {
             "Cardinals": "Kyler Murray",
-            "Falcons": "Desmond Ridder",
+            "Falcons": "Kirk Cousins",
             "Ravens": "Lamar Jackson",
             "Bills": "Josh Allen",
-            "Panthers": "Sam Darnold",
-            "Bears": "Justin Fields",
+            "Panthers": "Andy Dalton",
+            "Bears": "Caleb Williams",
             "Bengals": "Joe Burrow",
             "Browns": "Deshaun Watson",
             "Cowboys": "Dak Prescott",
-            "Broncos": "Russell Wilson",
+            "Broncos": "Bo Nix",
             "Lions": "Jared Goff",
-            "Packers": "Aaron Rodgers", // Note: As per user correction, Aaron Rodgers is now with the Jets
+            "Packers": "Jordan Love", 
             "Texans": "C.J. Stroud",
             "Colts": "Anthony Richardson",
             "Jaguars": "Trevor Lawrence",
             "Chiefs": "Patrick Mahomes",
-            "Raiders": "Jimmy Garoppolo",
+            "Raiders": "Davante Adams",
             "Chargers": "Justin Herbert",
             "Rams": "Matthew Stafford",
             "Dolphins": "Tua Tagovailoa",
-            "Vikings": "Kirk Cousins",
-            "Patriots": "Mac Jones",
+            "Vikings": "Sam Darnold",
+            "Patriots": "Drake Maye",
             "Saints": "Derek Carr", // Updated from Drew Brees to Derek Carr
             "Giants": "Daniel Jones",
             "Jets": "Aaron Rodgers", // Updated from Packers to Jets
             "Eagles": "Jalen Hurts",
-            "Steelers": "Kenny Pickett",
+            "Steelers": "Justin Fields",
             "49ers": "Brock Purdy", // Updated from Trey Lance to Brock Purdy
             "Seahawks": "Geno Smith",
             "Buccaneers": "Baker Mayfield", // Updated from Tom Brady to Baker Mayfield
-            "Titans": "Ryan Tannehill",
-            "Commanders": "Taylor Heinicke"
+            "Titans": "Will Levis",
+            "Commanders": "Jayden Daniels"
         };
 
         // Aggressive and R-Rated Trash Talk Templates (Updated)
@@ -325,4 +325,3 @@
     </script>
 </body>
 </html>
-
